fix: fixed texture loading